# File-Sorter--multithread-

./: FileSort-multi-v1-dirwalker.py  FileSort-multi-v2-crawlers-v2.py  FileSort-multi-v2-crawlers.py  README.MD  factorize.py  m6-filesort.py  pyproject.toml
